@startuml

'1-The following classes are in order.'

class EventSchedule {
    - Long id
    - ScheduleType type
    - SimpleTimestamp date
    - ChronoUnit units
    - Double unitValue
    - Direction direction
    - OffsetReference reference
}

class RangeSchedule {
    - Long id
    - ScheduleType type
    - SimpleTimestamp start
    - SimpleTimestamp end
    - ChronoUnit units
    - Double unitValue
}

class ActionDevice {
    - Long id
    - MeasurementDevice watchedMeasurement
    - Integer activationThreshold
    - Integer deactivationThreshold
}

class DeviceReading {
    - Long id
    - MeasurementDevice measurementDevice
    - Double reading
    - Timestamp timestamp
}

class DeviceTrigger {
    - Long id
    - ActionDevice triggeredDevice
    - Long triggerValue
    - SimpleTimestamp triggerTime
    - boolean completed
}

class GrowCycle {
    - Long id
    - String description
    - RangeSchedule rangeSchedule
    - List<GrowStage> growStages
}

class GrowingEvent {
    - Long id
    - String description
    - EventSchedule eventSchedule
    - GrowStage growStage
    - GrowingEventType growingEventType
}

class GrowingEventType {
    - Long id
    - String name
}

class GrowingParameterType {
    - Long id
    - String name
}

class GrowStage {
    - Long id
    - RangeSchedule rangeSchedule
    - GrowStageType growStageType
    - GrowCycle growCycle
    - List<GrowingEvent> growingEvents
    - List<MeasuredGrowingParameter> growingParameters
}

class GrowStageType {
    - Long id
    - String name
}

class MeasuredGrowingParameter {
    - Long id
    - GrowStage growStage
    - GrowingParameterType growingParameterType
    - List<OptimalGrowingParameter> optimalGrowingParameters
    - MeasurementDevice measurementDevice
}

class MeasurementDevice {
    - Long id
    - GrowingParameterType growingParameterType
    - MeasuredGrowingParameter growingParameter
}

class OptimalGrowingParameter {
    Long id
    RangeSchedule rangeSchedule
    MeasuredGrowingParameter measuredGrowingParameter
    Double optimalValue
}

class PermissionEntity {
    - Long id
    - String name
}

class RoleEntity {
    - Long id
    - String roleName
    - Set<PermissionEntity> permissionList
}

class SimpleTimestamp {
    - Integer day
    - Integer month
    - Integer year
    - Integer hour
    - Integer minutes
    - Integer seconds
}

class UserEntity {
    - Long id
    - String username
    - String password
    - boolean isEnabled
    - boolean accountNoExpired
    - boolean accountNoLocked
    - boolean credentialNoExpired
    - Set<RoleEntity> roles
}



'The following relationships are in order.'

EventSchedule --> SimpleTimestamp : «uses»
RangeSchedule --> SimpleTimestamp : «uses»
ActionDevice --> MeasurementDevice : «OneToOne»
DeviceReading --> MeasurementDevice : «ManyToOne»
DeviceTrigger --> ActionDevice : «ManyToOne»
DeviceTrigger --> SimpleTimestamp : «uses»
GrowCycle --> RangeSchedule : «OneToOne»
GrowCycle --> GrowStage : «OneToMany»
GrowingEvent --> EventSchedule : «OneToOne»
GrowingEvent --> GrowStage : «ManyToOne»
GrowingEvent --> GrowingEventType : «ManyToOne»
GrowStage --> RangeSchedule : «OneToOne»
GrowStage --> GrowStageType : «ManyToOne»
GrowStage --> GrowCycle : «ManyToOne»
GrowStage --> GrowingEvent : «OneToMany»
GrowStage --> MeasuredGrowingParameter : «OneToMany»
MeasuredGrowingParameter --> GrowStage : «ManyToOne»
MeasuredGrowingParameter --> GrowingParameterType : «ManyToOne»
MeasuredGrowingParameter --> OptimalGrowingParameter : «OneToMany»
MeasuredGrowingParameter --> MeasurementDevice : «OneToOne»
MeasurementDevice --> GrowingParameterType : «ManyToOne»
MeasurementDevice --> MeasuredGrowingParameter : «OneToOne»
RoleEntity --> PermissionEntity : «ManyToMany»
UserEntity --> RoleEntity : «ManyToMany»

@enduml